$Id$

2013-01-01  Christian Franke  <franke@computer.org>

	smartd: Use Attribute 190 for temperature (-W) if 194 is not present.

2013-01-01  Christian Franke  <franke@computer.org>

	Happy New Year! Update copyright year in version info.

2012-12-16  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: WRITE LOG on LSI/Megaraid should work fine, disable
	check, problem was linux related.
	os_linux.cpp: Implemented autoscan for the megaraid SAS controolers.
	os_linux.cpp: fix WRITE LOG command in SAT layer for -d megaraid.
	Reason was direction flag always set to READ.
	os_linux.cpp: unblock autodetection for the SAT drives in -d megaraid.

2012-12-14  Christian Franke  <franke@computer.org>

	man pages: Fix usage of Hyphen (-) and Minus sign (\-).

2012-12-13  Christian Franke  <franke@computer.org>

	man pages: Update EXPERIMENTAL notes.
	Fix spelling (Red Hat Bugzilla 665028).

2012-12-13  Christian Franke  <franke@computer.org>

	ataprint.cpp: Print Additional Product Identifier (OEM Id).

2012-12-13  Stanislav Brabec  <sbrabec@suse.cz>

	Update FSF postal address in all files.

2012-12-12  Christian Franke  <franke@computer.org>

	smartctl.cpp: Remove include <new> for QNXNTO.
	Should only be needed if placement new is used.
	smartd.cpp: Remove very old _GNU_SOURCE define.
	It was added 10 years ago in r147.  It is not (or no longer) needed
	and has an unwanted side effect (__USE_MINGW_ANSI_STDIO) on MinGW.

2012-12-11  Christian Franke  <franke@computer.org>

	smartd.cpp: Add '-w PATH, --warnexec=PATH' option.
	smartd.8.in: Document this option.

2012-12-11  Christian Franke  <franke@computer.org>

	smartd.cpp: Add '-d ignore' directive.
	smartd.conf.5.in: Document '-d ignore'.  Add DEVICESCAN example.
	Remove duplicate and outdated info about device scanning.
	smartd.8.in: Add notes about RAID controllers to device scanning info.

2012-12-11  Stanislav Brabec  <sbrabec@suse.cz>

	* smartd.initd.in: SUSE: Added sysconfig options to disable